--- a/chrome/startpage/manifest.json
+++ b/chrome/startpage/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "My custom new tab page",
+  "name": "newtab",
   "description": "Overrides the new tab page",
   "version": "0.1",
   "incognito": "split",
   "chrome_url_overrides": {
-    "newtab": "start.html"
+    "newtab": "index.html"
   },
   "manifest_version": 2
 }
